--- a/game.html
+++ b/game.html
@@ -52,10 +52,10 @@
               <button>📤 分配金額</button>
             </div>
           `;
-        } else if (role === "投資客") {
+        } else if (role === "投資代理人") {
           featureDiv.innerHTML = `
             <div class="card">
-              <h3>投資客功能</h3>
+              <h3>投資代理人功能</h3>
               <p>可以分配金額給投資人。</p>
               <button>📤 分配金額</button>
             </div>
