--- a/character-select.html
+++ b/character-select.html
@@ -71,8 +71,8 @@
     <h3>詐騙者</h3>
     <p>可以在任意回合捲走投資金。</p>
   </div>
-  <div class="role-card" onclick="selectRole('投資客')">
-    <h3>投資客</h3>
+  <div class="role-card" onclick="selectRole('投資代理人')">
+    <h3>投資代理人</h3>
     <p>可以收集投資並分配回報。</p>
   </div>
   <div class="role-card" onclick="selectRole('普通人')">
