--- a/game.html
+++ b/game.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>資安桌遊主畫面</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>角色動作頁面</title>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-    import { getDatabase, ref, get, onValue } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
+    import { getDatabase, ref, get, onValue, set } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyC7q0Pv2DtGZ5XripYcDOVxQQcIrkolzdE",
@@ -29,69 +29,92 @@
     document.addEventListener("DOMContentLoaded", async () => {
       document.getElementById("playerName").textContent = player;
 
+      const playerRef = ref(db, `rooms/${room}/players/${player}`);
       const moneyRef = ref(db, `rooms/${room}/players/${player}/money`);
-      onValue(moneyRef, (snap) => {
-        const money = snap.val();
-        document.getElementById("money").textContent = money !== null ? `$${money}` : "$0";
+      
+      // 設定初始金額（若尚未有）
+      get(moneyRef).then(snap => {
+        if (!snap.exists()) {
+          set(moneyRef, 100);
+        }
       });
 
+      // 監聽金額變化
+      onValue(moneyRef, snap => {
+        document.getElementById("money").textContent = "$" + (snap.val() ?? 0);
+      });
+
+      // 取得角色並顯示角色操作介面
       const roleRef = ref(db, `rooms/${room}/players/${player}/role`);
       const roleSnap = await get(roleRef);
       if (roleSnap.exists()) {
-        let role = roleSnap.val();
-        if (role === "投資客") role = "投資代理人"; // ✅ 更名為投資代理人
+        const role = roleSnap.val();
         document.getElementById("role").textContent = `角色：${role}`;
-
-        const actions = document.getElementById("roleActions");
-        actions.innerHTML = "";
-
-        if (role === "詐騙者" || role === "投資代理人") {
-          const div = document.createElement("div");
-          div.className = "card";
-          div.innerHTML = `
-            <h3>${role}功能</h3>
-            <p>可使用下列功能：</p>
-            <div style="margin-top: 1rem;">
-              <h4>有誰投資你？</h4>
-              <ul><li>展示：Alan 投資 $30</li><li>展示：Rick 投資 $50</li></ul>
-            </div>
-            <button>📤 分配金額</button>
-            ${role === "詐騙者" ? '<button>🧨 一鍵捲款</button>' : ""} 
-          `;
-          actions.appendChild(div);
-        } else if (role === "普通人") {
-          const div = document.createElement("div");
-          div.className = "card";
-          div.innerHTML = `
-            <h3>普通人功能</h3>
-            <p>可以選擇是否投資或建造。</p>
-            <button>💰 進行投資</button>
-            <div style="margin-top: 1rem;">
-              <h4>有誰分錢給你？</h4>
-              <ul><li>展示：Alan 分你 $20</li><li>展示：Leo 分你 $10</li></ul>
-            </div>
-          `;
-          actions.appendChild(div);
-        }
+        renderRolePanel(role);
       } else {
         document.getElementById("role").textContent = "❌ 無法讀取角色資訊";
       }
     });
+
+    function renderRolePanel(role) {
+  const panel = document.getElementById("rolePanel");
+
+  if (role === "詐騙者") {
+    panel.innerHTML = `
+      <h4>詐騙者功能</h4>
+      <p>可以在任何回合使用「一鍵捲款」捲走所有資金！</p>
+      <button>🧨 一鍵捲款</button>
+      <button>📤 分配金額給他人</button>
+      <hr />
+      <p>💰 以下是投資你的人（樣板資料）：</p>
+      <ul>
+        <li>Alan 投資了 $50</li>
+        <li>Betty 投資了 $30</li>
+      </ul>
+    `;
+  } else if (role === "投資代理人") {
+    panel.innerHTML = `
+      <h4>投資代理人功能</h4>
+      <p>收集投資並可分配回報。</p>
+      <button>📤 分配利潤</button>
+      <button>📤 分配金額給他人</button>
+      <hr />
+      <p>💰 以下是投資你的人（樣板資料）：</p>
+      <ul>
+        <li>Alan 投資了 $40</li>
+        <li>Cindy 投資了 $20</li>
+      </ul>
+    `;
+  } else if (role === "普通人") {
+    panel.innerHTML = `
+      <h4>普通人功能</h4>
+      <p>可以選擇是否投資或建造。</p>
+      <button>💰 進行投資</button>
+      <hr />
+      <p>💰 以下是分給你的錢（樣板資料）：</p>
+      <ul>
+        <li>詐騙者 Han 分你 $10</li>
+        <li>投資代理人 Rick 分你 $5</li>
+      </ul>
+    `;
+  }
+}
+
   </script>
   <style>
     body {
       font-family: sans-serif;
-      padding: 1.5rem;
-      max-width: 480px;
+      background: #f0f0f0;
+      padding: 1rem;
+      max-width: 500px;
       margin: auto;
-      background: #f9f9f9;
     }
     .card {
-      background: white;
-      padding: 1rem;
+      background: #fff;
+      padding: 1.2rem;
       margin-bottom: 1rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
   </style>
 </head>
@@ -101,7 +124,8 @@
     <p>💰 餘額：<strong id="money">$0</strong></p>
     <p id="role">角色：載入中...</p>
   </div>
-
-  <div id="roleActions"></div>
+  <div class="card" id="rolePanel">
+    <p>正在載入角色功能...</p>
+  </div>
 </body>
 </html>
