--- a/game.html
+++ b/game.html
@@ -131,5 +131,7 @@
   <div class="card" id="rolePanel">
     <p>正在載入角色功能...</p>
   </div>
+  <div class="card" id="investPanel"></div>
+
 </body>
 </html>
