--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
     import { getDatabase, ref, get, onValue, set } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";//加入資料庫
-    import { setupInvestUI } from "./roleActions.js";
+    //import { setupInvestUI } from "./roleActions.js";
 
 
  
