--- a/game.html
+++ b/game.html
@@ -106,7 +106,7 @@
   <div class="card">
     <h2>玩家：<span id="playerName">載入中...</span></h2>
     <p>💰 餘額：<strong id="money">$0</strong></p>
-    <p id="role">角色：載入中...</p>
+    <p>你的角色是：<strong>${role}</strong></p>
   </div>
   <div class="card" id="rolePanel">
     <p>正在載入角色資訊...</p>
